# llvm-rust

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
examples/: fib.rs  tan.rs
src/: block.rs  buffer.rs  builder.rs  compile.rs  context.rs  engine.rs  lib.rs  macros.rs  module.rs  phi.rs  ty.rs  util.rs  value.rs
tests/: branch.rs  builder.rs  engine.rs
