[package]

exclude = [ ".gitignore", ".travis.yml" ]
authors = [ "Hyunsik Choi <hyunsik@apache.org>" ]
description = "A wrapper for LLVM, a powerful library and toolkit for compilers"
documentation = "https://tombebbington.github.io/llvm-rs/llvm/index.html"
keywords = [ "compile", "compiler", "jit", "interpreter" ]
license = "BSD-3-Clause"
name = "llvm"
readme = "README.md"
repository = "https://github.com/hyunsik/llvm-rust"
version = "0.4.0"

[lib]
name = "llvm"

[profile.release]
lto = true

[dependencies]
cbox = "*"
libc = "*"
llvm-sys = "*"
